# bootdev-staticsite

./: .coveragerc  .gitignore  main.sh  pyproject.toml  test.sh
src/: htmlnode.py  main.py  parsing.py  test_htmlnode.py  test_parsing.py  test_textnode.py  textnode.py
